--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,8 +122,6 @@ body {
   z-index: 2;
 }
 
-
-
 .navigation-item-user {
   position: relative;
 }
@@ -813,8 +811,11 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 23px;
+}.modal-counter::-webkit-inner-spin-button, .modal-counter::webkit-countrer-spin-button {
+appearance: none;
 }
 
+.advantages-item
 .input-wrapper {
   display: flex;
   margin-left: auto;
@@ -899,6 +900,7 @@ h3 {
   background-color: #f2f2f2;
   border: none;
   border-radius: 4px;
+
 
 }
 
