--- a/styles/styles.css
+++ b/styles/styles.css
@@ -463,7 +463,7 @@ body {
   padding: 80px 85px;
 }
 
-h3 {
+.title{
   font-size: 24px;
 }
 
@@ -800,7 +800,6 @@ h3 {
   margin-top: 0;
   margin-bottom: 64px;
   padding-right: 40px;
-
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -862,6 +861,7 @@ h3 {
   font-weight: 700;
   line-height: 24px;
   color: #000000;
+  margin-right: auto;
 }
 
 .form-modal-input-text {
